<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="34dp"
        android:layout_toEndOf="@+id/previous"
        android:layout_toRightOf="@+id/previous"
        android:gravity=""
        android:text="@string/close" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="34dp"
        android:text="@string/previous" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="34dp"
        android:layout_toEndOf="@+id/close"
        android:layout_toRightOf="@+id/close"
        android:text="@string/next" />

    <ImageView
        android:id="@+id/tutorialImage"
        android:layout_width="450dp"
        android:layout_height="225dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:src="@android:drawable/divider_horizontal_bright" />

    <TextView
        android:id="@+id/describe"
        android:layout_width="261dp"
        android:layout_height="344dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_toEndOf="@+id/tutorialImage"
        android:layout_toRightOf="@+id/tutorialImage"
        android:scrollHorizontally="true"/>

</RelativeLayout>